--- a/ch9/ch9-3.md
+++ b/ch9/ch9-3.md
@@ -5,13 +5,13 @@
 ```js
 while (true) { 
     var status;
-    status = ReadStatus("system.TIME_SECOND");  //ReadStatus：读取数据点质量戳
-    console.log("system.TIME_SECOND status is ", status);
+    status = ReadStatus('system.TIME_SECOND');  //ReadStatus：读取数据点质量戳
+    console.log('system.TIME_SECOND status is ', status);
 	if(status){ // 如果该点存在并且质量戳为Good
 		var curVal;
-		curVal = ReadInt("system.TIME_SECOND"); //ReadInt：从指定数据点读取整数 
-		console.log("system.TIME_SECOND value is ", status);
-		WriteInt("user.test",curVal); //WriteInt：向指定数据点写入整数 
+		curVal = ReadInt('system.TIME_SECOND'); //ReadInt：从指定数据点读取整数 
+		console.log('system.TIME_SECOND value is ', status);
+		WriteInt('user.test',curVal); //WriteInt：向指定数据点写入整数 
 	}
     Sleep(1000); //休眠1秒钟
 }
@@ -23,13 +23,13 @@ while (true) {
 
 ```js
 var status;
-status = ReadStatus("system.TIME_SECOND"); //ReadStatus：读取数据点质量戳
-console.log("system.TIME_SECOND status is ", status);
+status = ReadStatus('system.TIME_SECOND'); //ReadStatus：读取数据点质量戳
+console.log('system.TIME_SECOND status is ', status);
 if(status){
 	var curVal;
-	curVal = ReadInt("system.TIME_SECOND"); //ReadInt：从指定数据点读取整数 
-	console.log("system.TIME_SECOND value is ", status);
-	WriteInt("user.test",curVal); //WriteInt：向指定数据点写入整数 
+	curVal = ReadInt('system.TIME_SECOND'); //ReadInt：从指定数据点读取整数 
+	console.log('system.TIME_SECOND value is ', status);
+	WriteInt('user.test',curVal); //WriteInt：向指定数据点写入整数 
 }
 ```
 
@@ -39,13 +39,13 @@ if(status){
 
 ```js
 var status;
-status = ReadStatus("system.TIME_SECOND"); //ReadStatus：读取数据点质量戳
-console.log("system.TIME_SECOND status is ", status);
+status = ReadStatus('system.TIME_SECOND'); //ReadStatus：读取数据点质量戳
+console.log('system.TIME_SECOND status is ', status);
 if(status){
 	var curVal;
-	curVal = ReadInt("system.TIME_SECOND"); //ReadInt：从指定数据点读取整数 
-	console.log("system.TIME_SECOND value is ", status);
-	WriteInt("user.test",curVal); //WriteInt：向指定数据点写入整数 
+	curVal = ReadInt('system.TIME_SECOND'); //ReadInt：从指定数据点读取整数 
+	console.log('system.TIME_SECOND value is ', status);
+	WriteInt('user.test',curVal); //WriteInt：向指定数据点写入整数 
 }
 ```
 
