--- a/ch3/ch3-5.md
+++ b/ch3/ch3-5.md
@@ -31,3 +31,50 @@
 
 <center>图3-7 表达式检查</center>
 
+**算术运算符：**
+
+​	＋　：加运算符
+
+​	－　：减运算符
+
+​	＊　：乘运算符
+
+​	／　：除运算符
+
+​	％　：取余运算符
+
+​	＊＊： 次方运算符（例 A＊＊2 代表A的2次方）
+
+​	＆　：单位与
+
+​	｜　：单位或
+
+​	∧     ：单位异或
+
+​	＜＜：单次左移
+
+​	＞＞：单次右移
+
+**逻辑运算符：**
+
+​	＞	：大于运算符
+
+​	＞=  ：大于等于运算符
+
+​	＜	:  小于运算符
+
+​	＜=  :  小于等于运算符
+
+​	==    :  等于运算符
+
+​	!=     :  不等于运算符
+
+​	=~    :  异或比较运算符
+
+​	!~     :  异或非比较运算符
+
+​	||    :  或运算符
+
+​	&&   : 与运算符
+
+​	(   )   : 括号运算符，括号内的公式优先计算。
