--- a/ch1/ch1-4.md
+++ b/ch1/ch1-4.md
@@ -1,10 +1,10 @@
-## 1.4 删除工程
+## 1.4 复制工程
 
-在“工程管理”对话框中，单击选中需要删除的工程，单击“删除工程”按钮，在弹出的系统提示框中单击“确定”，完成删除工程的操作。操作步骤如图 1-5 所示。 
+在“工程管理”对话框中，单击选中需要复制的工程，单击“复制工程”按钮，在弹出的系统提示框输入新的工程名称后单击“确定”，完成复制工程的操作。操作步骤如图 1-5 所示。 
 
-![1-5 删除工程](assets/1-5 删除工程.png)
+![1-6 复制工程](assets/1-6 复制工程.png)
 
-<center>图1-5 删除工程</center>
+<center>图1-6 复制工程</center>
 
 
 
