--- a/ch1/ch1-2.md
+++ b/ch1/ch1-2.md
@@ -1,14 +1,6 @@
-## 1.2 打开工程
+## 1.2 下载工程
 
-在“工程管理”对话框中，单击选中需要打开的工程，单击“打开工程”按钮。操作步骤如图 1-3所示。 
+工程配置编辑好之后，需要将该配置下载到网关，让网关按照工程配置的内容进行工作，操作步骤如图所示。 
 
-![1-3 打开工程](assets/1-3 打开工程.png)
-
-<center>图1-3 打开工程</center>
-
-在打开工程完成之后，会在左侧工程树中显示选中工程的配置，如图1-4所示。 
-
-![1-4 打开工程完成](assets/1-2 新建工程完成.png)
-
-<center>图1-4 打开工程完成</center>
+![下载工程](assets/下载工程.png)
 
