--- a/ch1/ch1-3.md
+++ b/ch1/ch1-3.md
@@ -1,12 +1,14 @@
-## 1.3 复制工程
+## 1.3 打开工程
 
-在“工程管理”对话框中，单击选中需要复制的工程，单击“复制工程”按钮，在弹出的系统提示框输入新的工程名称后单击“确定”，完成复制工程的操作。操作步骤如图 1-5 所示。 
+在“工程管理”对话框中，单击选中需要打开的工程，单击“打开工程”按钮。操作步骤如图 1-3所示。 
 
-![1-6 复制工程](assets/1-6 复制工程.png)
+![1-3 打开工程](assets/1-3 打开工程.png)
 
-<center>图1-6 复制工程</center>
+<center>图1-3 打开工程</center>
 
+在打开工程完成之后，会在左侧工程树中显示选中工程的配置，如图1-4所示。 
 
+![1-4 打开工程完成](assets/1-2 新建工程完成.png)
 
-
+<center>图1-4 打开工程完成</center>
 
