--- a/ch1/ch1-5.md
+++ b/ch1/ch1-5.md
@@ -1,8 +1,12 @@
-## 1.5 获取网关的工程配置
+## 1.5 删除工程
 
-在“网关管理”对话框中，选中需要上传工程的网关IP，单击“系统设置”，在弹出的系统提示框中单击“登录”（默认密码为空），单击“上传工程”。操作步骤如图 1-7 所示。 
+在“工程管理”对话框中，单击选中需要删除的工程，单击“删除工程”按钮，在弹出的系统提示框中单击“确定”，完成删除工程的操作。操作步骤如图 1-5 所示。 
 
-![1-7 上传工程](assets\1-7 上传工程.png)
+![1-5 删除工程](assets/1-5 删除工程.png)
 
-<center>图1-7 上传工程</center>
+<center>图1-5 删除工程</center>
+
+
+
+
 
