--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -47,6 +47,8 @@
    - 单向验证——需要上传CA文件到网关，当网关与broker连接时，网关作为客户端提供证书供broker验证。CA文件由云服务商提供。 
 
    - 双向验证——需要上传CA文件、Cert文件、KEY文件到网关，当网关与broker连接时，网关与broker均向对方提供证书。CA文件、Cert文件、KEY文件均由云服务商提供。 
+   
+   **上传证书到网关：**在GC上点“网关管理”，然后点“搜索网关”，在网关列表中点击要下载证书的网关IP，再点“系统设置”，在弹出的对话框中点“开发者模式”，输入密码：luomi，点“下载MQTT证书”按钮，在弹出的对话框中选择好CA文件、Cert文件、KEY文件，然后点“确定”开始下载证书到网关。
 
 ![6-4 mqtt SSLTLS](assets/6-4 mqtt SSLTLS.png)
 
