--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -68,6 +68,8 @@
 
 ## 6.2.3 发布、订阅主题配置
 
+**6.2.3.1  周期上传**
+
 **实时数据发布主题：多主题、多频率、不同格式上传** 
 
 可通过增删改按钮对实时数据主题进行操作，每个主题可以使用不同的主题配置、不同的上传频率、不同的数据过滤方式、不同的数据格式模板等。
@@ -116,9 +118,18 @@
 
 - 连接主题：mqtt连接成功时，将填写的字符串发布到相应的主题。
 
-  ![连接主题](assets/连接主题.png)
+  ![ 连接主题](assets/连接主题.png)
+
+  **6.2.3.2  采集即上传**
+
+  当任意数据点采集到数据时，会即时上传，可设置实时数据主题，数据过滤方式和模板。控制主题、拓展主题与周期上传配置相同。
+
+  ![ 连接主题](assets/采集即上传.png)
+
+  
 
 - 离线数据发布：详见6.3章节
+
 - 查询数据主题：在配置界面中“查询数据订阅的主题”一项输入需要订阅的主题，当选中default.js时，网关订阅到如下格式的数据，就进行数据查询的操作，网关会在“查询数据发布的主题”发布此次查询到的结果。
 
 
