--- a/ch3/ch3-3.md
+++ b/ch3/ch3-3.md
@@ -10,8 +10,9 @@
 
 编辑设备属性，点击确定生效。 
 
-- 设备名称：自定义，设备在该通道下的唯一标记，不可重复； 
-- 设备地址：设备的通讯地址，如Modbus RTU从站设备的站号（slave ID）, 645电能表的表号，BACnet的设备ID等； 
+- 设备ID：可自定义，默认为"Device X"（X为 1,2,3....），同一通道下，设备ID不可重复；
+- 设备名称：可自定义，设备的描述；
+- 设备地址：设备的通讯地址，如Modbus RTU从站设备的站号（slave ID）, 645电能表的表号，BACnet的设备ID等。 
 
 
 
