--- a/ch2/ch2-10.md
+++ b/ch2/ch2-10.md
@@ -1,31 +1,9 @@
-# 2.11 采集驱动更新
+# 2.10 网络测试
 
 
 
-![采集驱动更新流程图](assets/采集驱动更新流程图.png)
+　　用户输入目标IP，点击“确定”按钮，网关对目标IP执行ping操作。(默认进行5次ping操作)。
 
-<center>采集驱动更新示意图</center>
+![2-15 网络测试](assets/2-15 网络测试.png)
 
-
-
-## 2.11.1 配置工具采集驱动更新
-
-　　配置工具运行时会检查云端是否有新版本的采集驱动，当有采集驱动更新时会弹出驱动更新窗口，在其中显示出新的采集驱动和版本信息，可以选择下载更新配置工具的采集驱动。
-
-![配置工具更新采集驱动](assets/配置工具更新采集驱动.png)
-
-
-
-## 2.11.2 网关采集驱动更新
-
-　　点击”网关管理“,再点”搜索网关“，然后选择需要升级采集驱动的网关IP，单击”系统设备“，在弹出的对话框中选择”开发者模式“，输入默认密码”luomi"后，点“确定”按钮。
-
-![网关采集驱动升级1](assets/网关采集驱动升级1.png)
-
-　　在“系统设置”对话框中点“固件升级”，弹出固件升级窗口，在左边驱动中点击需要升级的驱动，点过的驱动会显示在更新列表中，选好需要更新的驱动后，单击“固件升级”按钮，开始升级。
-
-![网关采集驱动升级2](assets/网关采集驱动升级2.png)
-
-　　升级完成后，更新列表中的状态会显示出更新的结果。
-
-![网关采集驱动升级3](assets/网关采集驱动升级3.png)
+<center>图2-15 网络测试</center>
