--- a/ch2/ch2-4.md
+++ b/ch2/ch2-4.md
@@ -10,6 +10,8 @@ GC可以将当前网关的配置文件上传到本地。
 
 可以切换联网方式：有线、WIFI、4G，选择有线或WIFI时可以配置相关的网络参数。
 
+**当选择联网方式为4G时，请不要将有线设置成DHCP**
+
 ![2-8 网络设置](assets/2-8 网络设置.png)
 
 <center>图2-8 设置IP</center>
