--- a/ch4/ch4-1.md
+++ b/ch4/ch4-1.md
@@ -2,7 +2,7 @@
 
 网关连接“罗米物联网平台”，需要先在平台上注册一个帐号。
 
-1.打开 http://cloud.iotddc.com 页面，在登录界面上点击“去注册",注册好后登陆平台。
+1.打开 http://cloud.iotddc.com/cloud 页面，在登录界面上点击“去注册",注册好后登陆平台。
 
 ![罗米物联平台登陆注册](assets/罗米物联平台登陆注册.png)
 
@@ -30,7 +30,7 @@
 
 #### **罗米物联网平台功能简介：**
 
-　　**数据与监控：**同时支持PC端（网址：http://cloud.iotddc.com）和手机端（公众号：罗米测控）操作，可实时监控网关、设备、采集点的状态，查看实时和历史数据及生成图表。
+　　**数据与监控：**同时支持PC端（网址：http://cloud.iotddc.com/cloud）和手机端（公众号：罗米测控）操作，可实时监控网关、设备、采集点的状态，查看实时和历史数据及生成图表。
 
 　　**告警及通知：**可设置告警条件，生成**告警通知**并推送到**微信**或**邮箱**，及时掌握设备状运行状态。
 
@@ -38,7 +38,7 @@
 
 　　**高级功能：**能耗管理模块，功能有报表、图表、位置分组、倍率、公式计算、自定义报表等。
 
-　　**详情请进：**http://cloud.iotddc.com
+　　**详情请进：**http://cloud.iotddc.com/cloud
 
 ![网关监控](assets/网关监控.png)
 
