--- a/ch2/ch2-9.md
+++ b/ch2/ch2-9.md
@@ -2,11 +2,15 @@
 
 
 
-　　用户可以查看网关运行日志及网关与设备交互的报文，可以对日志进行筛选，在”筛选日志“框里输入日志包含的内容，然后点”确定“按钮开始筛选。
+　　用户可以查看网关运行日志及网关与设备交互的报文。
 
 ![2-14 网关数据采集日志和报文输出](assets/2-14 网关数据采集日志和报文输出.png)
 
-<center>图2-14 网关数据采集日志和报文输出</center>
+
+
+　　用户可以对日志进行筛选，在”筛选日志“框里输入日志包含的内容，然后点”确定“按钮开始筛选。
+
+![2-14 网关数据采集日志和报文输出](assets/网关数据采集日志筛选.png)
 
 
 
