--- a/ch9/ch9-1.md
+++ b/ch9/ch9-1.md
@@ -8,7 +8,7 @@
 
    - 开机运行：程序启动时运行JS脚本；
 
-   - 循环：根据配置的执行周期（ms）循环执行JS脚本；
+   - 循环：根据配置的执行周期（ms）循环执行JS脚本；（已删除，请使用开机运行加上while(true){}）
 
    - 定时：每天规定的时间（时：分：秒）执行JS脚本； 
 
