添加公共能耗平台文档

--- a/ch12/ch12-5.md
+++ b/ch12/ch12-5.md
@@ -1,4 +1,4 @@
-# 12.5 添加数据点
+# 13.5 添加数据点
 
 左键单击选择需要新建数据点的设备，右侧会显示该设备下已编辑的数据点，可以在表格当中进行增删改。
 
@@ -8,6 +8,7 @@
 
 ![12-6 添加数据点](assets/12-6 添加数据点.jpg)
 
-<center>图12-6 添加数据点</center>
+<center>添加数据点</center>
 
 协议表格的参数说明详见《罗米测控网关通讯协议说明》。
+
