--- a/ch9/ch9-1.md
+++ b/ch9/ch9-1.md
@@ -1,4 +1,4 @@
-# 9.1 操作步骤
+# 10.1 操作步骤
 
 具体操作如下： 
 
@@ -24,7 +24,7 @@
 
 ![9-1 JavaScript脚本编辑步骤](assets/9-1 JavaScript脚本编辑步骤.png)
 
-<center>图9-1 JavaScript脚本编辑步骤</center>
+<center>JavaScript脚本编辑步骤</center>
 
 用户可以在编辑框中自行添加符合js语法的脚本，如while、if、else等。
 
