--- a/ch12/ch12-2.md
+++ b/ch12/ch12-2.md
@@ -1,10 +1,10 @@
-# 12.2 新建网关设备
+# 13.2 新建网关设备
 
 右键单击“domo”根节点，选择“添加网关”，输入网关名称，选择需要配置的网关类型，单击“确定”按钮，如图12-2所示。
 
 ![12-2 新建网关设备](assets/12-2 新建网关设备.png)
 
-<center>图12-2 新建网关设备</center>
+<center>新建网关设备</center>
 
 此时我们就可以在“demo”根节点下，看到该网关类型所有的可供配置项。
 
@@ -18,5 +18,5 @@
 
 ![12-3 工程树](assets/12-3 工程树.png)
 
-<center>图12-3 工程树</center>
+<center>工程树</center>
 
