--- a/ch10/ch10-1.md
+++ b/ch10/ch10-1.md
@@ -40,7 +40,7 @@
 
 ### 查看网关采集
 
-　　点“网关管理”-->“搜索网关”，在“本地网关”列表中点击需要查看的网关，然后点击一个设备，就可以看到这个设备采集到的数据点及采集关态。
+　　点“网关管理”-->“搜索网关”，在“本地网关”列表中点击需要查看的网关，然后点击一个设备，就可以看到这个设备采集到的数据点及采集状态。
 
 ![查看网关采集](assets/查看网关采集.png)
 
