--- a/ch12/ch12-2.md
+++ b/ch12/ch12-2.md
@@ -1,6 +1,6 @@
 # 13.2 新建网关设备
 
-右键单击“domo”根节点，选择“添加网关”，输入网关名称，选择需要配置的网关类型，单击“确定”按钮，如图12-2所示。
+右键单击“demo”根节点，选择“添加网关”，输入网关名称，选择需要配置的网关类型，单击“确定”按钮，如图12-2所示。
 
 ![12-2 新建网关设备](assets/12-2 新建网关设备.png)
 
