--- a/ch2/ch2-5.md
+++ b/ch2/ch2-5.md
@@ -24,7 +24,7 @@
 
 ![网关管理平台](assets/网关管理平台.png)
 
-网关管理平台操作视频：http://www.iotddc.com/download/filemanage/admin/2.3config.mp4
+网关管理平台操作视频：http://www.iotddc.com/download/admin/2.3config.mp4
 
 
 
