--- a/ch6/ch6-2.md
+++ b/ch6/ch6-2.md
@@ -102,7 +102,7 @@
 
 **控制主题**
 
-可通过控制订况的主题和控制向应发布的主题对设备进行写操作，每个主题可以使用不同的主题配置、不同的数据格式模板等。
+可通过控制订阅的主题和控制响应发布的主题对设备进行写操作，每个主题可以使用不同的主题配置、不同的数据格式模板等。
 
 ![控制主题](assets\控制主题.png)
 
