--- a/ch6/ch6-10.md
+++ b/ch6/ch6-10.md
@@ -20,7 +20,7 @@
 
 2.在设备页面点击“设置连接”按钮，可以看到该设备的序列号和设备下的所有传感器。
 
-![6-17 Tlink设置连接](assets/6-17 Tlink设置连接.png)
+![6-17 Tlink设置连接](assets/Tlink-1.png)
 
 <center>图6-17 Tlink设置连接</center>
 
@@ -30,7 +30,7 @@
 
 1.勾选“启用”按钮，填写Tlink物联网平台设备信息中的IP和序列号，上传周期自定义。点击“保存”按钮即可完成Tlink的连接配置；
 
-![6-18 Tlink连接配置](assets/6-18 Tlink连接配置.png)
+![6-18 Tlink连接配置](assets/Tlink-2.png)
 
 <center>图6-18 Tlink连接配置</center>
 
@@ -38,9 +38,13 @@
 
 3.将Tlink页面中生成的传感器ID填写到对应的数据点表格当中。
 
-![6-19 上传点的配置](assets/6-19 上传点的配置.png)
+![6-19 上传点的配置](assets/Tlink-3.png)
 
 <center>图6-19 上传点配置</center>
 
- 
+ 4.查看Tlink物联网平台实时数据。
+
+![6-20 实时数据](assets/Tlink-4.png)
+
+<center>图6-20 实时数据</center>
 
