更新4.1 坏值保持

--- a/ch4/ch4-1.md
+++ b/ch4/ch4-1.md
@@ -1,78 +1,48 @@
-# 4.1 罗米物联网平台
+# 4.1 坏值保持
 
-网关连接“罗米物联网平台”，需要先在平台上注册一个帐号。
+坏值保持是数据处理的一种。如果数据采集失败则保持最后一次采集到的数据值。
 
-1.打开 http://cloud.iotddc.com/cloud 页面，在登录界面上点击“去注册",注册好后登陆平台。
+1.保持数据值，"质量戳保持Good"选择"No"。配置如下图所示。
 
-![罗米物联平台登陆注册](assets/罗米物联平台登陆注册.png)
-
-2.给需要接入”平台“的每个网关创建一个”接入序列号“（注意：这个序列号会配置进GC网关工程中，不要将一个序列号给多个网关使用，否则数据会出现问题）。
-
-在”接入序列号“页面中点”新增“按钮，会自动新生成一个序列号，点击列序号后的”修改“按钮，可以给序列号设置名称。
-
-![添加序列号](assets/添加序列号.png)
+![不保持质量戳](assets/ValueKeep_1.png)
 
 
 
-3.回到GC网关工程中，单击”罗米物联网平台 “，填写相关参数（此处序列号填写我们在平台上创建的接入序列号），在右边的列中点”添加”，选择需要上传到平台的采集点。如图4-1所示。
+通过Modbus Slave工具模拟modbusTCP数据采集，将采集点添加到坏值保持中，不选中"质量戳保持GOOD"查看MQTT订阅数据的值和状态。
 
-![4-1 罗米物联平台参数配置](assets/4-1 罗米物联平台参数配置.png)
+![不保持质量戳](assets/ValueKeep_2.png)
 
-<center>图4-1 罗米物联平台参数配置</center>
+ 正常采集时，MQTT订阅到的数据值和状态值如下图
 
-4.将工程下载到网关中运行。
-
-![下载工程](assets/下载工程.png)
-
-5.完成上述操作后，可以在“平台”的”接入监控”页面中查看网关的状态，在“设备监控”中查看设备的状态、实时数据、历史数据和图表。
+![不保持质量戳](assets/ValueKeep_3.png)
 
 
 
-#### **罗米物联网平台功能简介：**
+![不保持质量戳](assets/ValueKeep_4.png)
 
-　　**数据与监控：**同时支持PC端（网址：http://cloud.iotddc.com/cloud）和手机端（公众号：罗米测控）操作，可实时监控网关、设备、采集点的状态，查看实时和历史数据及生成图表。
+断开后，MQTT数据值和状态值如下图，数据值依旧保持最后一次采集到的数据。状态值显示**Error**。
 
-　　**告警及通知：**可设置告警条件，生成**告警通知**并推送到**微信**或**邮箱**，及时掌握设备状运行状态。
+![不保持质量戳](assets/ValueKeep_5.png)
 
-　　**数据转发：**支持数据库转发、 webService转发、TCP转发等。
+2.保持数据值，"质量戳保持Good"选择"Yes"。配置如下图所示。
 
-　　**高级功能：**能耗管理模块，功能有报表、图表、位置分组、倍率、公式计算、自定义报表等。
-
-　　**详情请进：**http://cloud.iotddc.com/cloud
-
-![网关监控](assets/网关监控.png)
-
-<center>网关监控</center>
+![不保持质量戳](assets/ValueKeep_6.png)
 
 
 
-![网关监控](assets/设备监控.png)
+![不保持质量戳](assets/ValueKeep_2.png)
 
-<center>实时数据</center>
+正常采集MQTT数据值和状态值如下图
 
-
-
-![折线图](assets/折线图.png)
-
-<center>图表</center>
+![不保持质量戳](assets/ValueKeep_7.png)
 
 
 
-　<div align="center">
-     <img src="assets/手机端.jpg" height="600" width="280" alt="罗米物联平台手机端" />
-     <span>　　　<span>
-     <img src="assets/罗米物联首页.jpg" height="600" width="280" alt="罗米物联首页" />  </div>
+![不保持质量戳](assets/ValueKeep_4.png)
 
-<center>手机端登录和首页</center>
+断开后，MQTT数据值和状态值如下图，数据值依旧保持最后一次采集到的数据。状态值显示**Good**。
 
-
-
-<div align="center">
-     <img src="assets/罗米物联设备.jpg" height="600" width="280" alt="罗米物联设备" />
-    <span>　　　<span>
-        <img src="assets/微信告警通知.jpg" height="600" width="280" alt="告警通知到微信" />    </div>
-
-<center>手机端实时数据和告警通知</center>
+![不保持质量戳](assets/ValueKeep_8.png)
 
 
 
