更新5.5 HTTP写操作接口

--- a/ch5/ch5-5.md
+++ b/ch5/ch5-5.md
@@ -402,18 +402,18 @@
 
 ##### URL（进行写操作地址）：
 
-> http://192.168.1.233/ctrlRequest  (192.168.1.233为需要进行写操作的网关的ip地址)
+> http://192.168.0.126/API/V2/write  (192.168.0.126为需要进行写操作的网关的ip地址)
 
 ##### HTTP请求方式：
 
-> HTTP post，form-data
+> HTTP post，x-www-form-urlencoded
 
 ##### 请求参数:
 
-| 字段名称 | 字段类型 |      必填       |          说明          |
-| -------- | :------: | :-------------: | :--------------------: |
-| id       |  string  | Device1.tag0001 | 指明进行写操作的采集点 |
-| val      |  string  |       10        |      需要写入的值      |
+| 字段名称 | 字段类型 |    必填    |          说明          |
+| -------- | :------: | :--------: | :--------------------: |
+| id       |  string  | Device1.R1 | 指明进行写操作的采集点 |
+| val      |  string  |     0      |      需要写入的值      |
 
 ##### 返回结果格式:
 
@@ -433,7 +433,7 @@ HTTP通讯成功返回结果都为true，指明网关接收到发送的写操作
 
 ##### Postman截图：
 
-![write](assets/write.png)
+![write](assets/write1.png)
 
 
 
