更新4.2 数据存储

--- a/ch5/ch5-5.md
+++ b/ch5/ch5-5.md
@@ -154,11 +154,11 @@
 
 ## 5.5.1.2 历史数据
 
-### 获取单个设备的历史数据
+### 获取单个数据点的历史数据
 
 ##### 接口功能：
 
-> 获取单个设备的历史数据
+> 获取单个数据点的历史数据
 
 ##### URL（获取实时数据地址）：
 
